fix error Could not resolve fixing responsibility on mobile

--- a/src/components/art/Art.css
+++ b/src/components/art/Art.css
@@ -1,7 +1,7 @@
 /* ===== ART SECTION ===== */
 #art {
-  position: relative;
-  min-height: 100dvh;
+  /* position: relative;
+  min-height: 100dvh; */
   padding: 5rem 1.25rem;
   display: flex;
   flex-direction: column;
@@ -10,8 +10,8 @@
 
   background: radial-gradient(
     circle at center,
-    #434343 0%,
-    #000 50%,
+    #b52a9d 0%,
+    #232245 40%,
     transparent 100%
   );
   overflow: hidden;
@@ -80,7 +80,7 @@
   height: 100%;
   object-fit: contain;
 
-  mask-image: url("/images/mask-imag1.png");
+  mask-image: url("/images/mask-img.png");
   mask-repeat: no-repeat;
   mask-position: center;
   mask-size: 50%;
